# tijuana-dispersion-experiments

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  Makefile  README.md  pyproject.toml
.dagster_io/: sobol_aggregate
.dagster_io/sobol_chunk_results/: chunk_000  chunk_001  chunk_002  chunk_003  chunk_004  chunk_005  chunk_006  chunk_007  chunk_008  chunk_009  chunk_010  chunk_011  chunk_012  chunk_013  chunk_014  chunk_015  chunk_016  chunk_017  chunk_018  chunk_019  chunk_020  chunk_021  chunk_022  chunk_023  chunk_024  chunk_025  chunk_026  chunk_027  chunk_028  chunk_029  chunk_030  chunk_031  chunk_032  chunk_033  chunk_034  chunk_035  chunk_036  chunk_037  chunk_038  chunk_039  (+60 more)
.github/workflows/: ci.yml
data/: README.md  manifest.yaml
docs/: calibration_loop_roadmap.md  calibration_status.md  emissions_model_spec.md  handoff_2026-05-05.md  nrp_calibration_plan.md
emissions_research/: README.md
experiments/2026-05-05_calibration_v2/: RESULTS.md  make_plot.py  run.py
experiments/2026-05-05_demo_v1/: RESULTS.md  make_plot.py  run.py
experiments/2026-05-05_sensitivity_lhs/: RESULTS.md  make_plot.py  run.py
experiments/2026-05-11_calibration_v3/: README.md  RESULTS.md  config.yaml  run.py
experiments/2026-05-11_calibration_v3_1/: README.md  RESULTS.md  config.yaml  run.py
experiments/2026-05-11_sy_north_residual_diagnostic/: README.md  RESULTS.md  run.py
experiments/2026-05-12_calibration_v3_2/: README.md  RESULTS.md  config.yaml
experiments/2026-05-12_calibration_v3_3_spill_exclude/: README.md  RESULTS.md  config.yaml  run.py
experiments/2026-05-12_calibration_v3_5_sy_nearfield/: README.md  RESULTS.md  config.yaml  run.py
experiments/2026-05-12_calibration_v3_6_mixing_lid/: README.md  RESULTS.md  config.yaml  run.py
experiments/2026-05-12_ib_metric_reframe/: README.md  RESULTS.md  run.py
experiments/2026-05-12_may1011_event_analysis/: README.md  RESULTS.md  config.yaml  run.py
experiments/2026-05-15_box_calibration/: README.md  RESULTS.md  run.py
experiments/2026-05-15_calm_night_wind_reanalysis/: README.md  RESULTS.md  run.py
experiments/2026-05-15_emission_driver_attribution/: README.md  RESULTS.md  run.py
experiments/2026-05-15_sobol_full/: README.md  RESULTS.md  run.py
experiments/2026-05-16_box_driver_calibration/: README.md  RESULTS.md  run.py
experiments/2026-05-16_event_trigger_magnitude/: README.md  RESULTS.md  run.py
experiments/2026-05-22_multi_window_sobol/: README.md  RESULTS.md  compare.py  windows.yaml
experiments/_template/: README.md  RESULTS.md  config.yaml  run.py
experiments/issues/: calibration_v3.md
nrp/: DEPLOYMENT.md  Dockerfile  README.md  dagster.yaml  dagster_pipeline.py  definitions.py  env.example  env.sh  mcmc.py  resources.py  runstore.py  sobol.py  workspace.yaml
nrp/issues/: sobol_nrp.md
nrp/k8s/: dagster-values.yaml  job-reaper-cronjob.yaml  job_template.yaml  rbac.yaml
nrp/scripts/: _monitor_backfill.py  _submit_backfill.py  fetch_sobol_results.py  (+2 more)
scripts/: check_no_mock_data.py  fetch_data.py
tests/: conftest.py  test_sobol.py
(+76 files in other folders)
